test/langtools/tools/javac/valhalla/lworld-values/CheckExtends.out
CheckExtends.java:8:14: compiler.err.empty.value.not.yet
1 error
